# bottt

./: .gitignore  Cargo.toml
dep-installer-hack/: Cargo.toml  Shuttle.toml  build.rs
dep-installer-hack/src/: main.rs
src/: bot.rs  main.rs
src/commands/: hello_world.rs  jpg.rs  mod.rs  vote.rs  what.rs
src/voice_command/: mod.rs  play.rs  tts.rs  utils.rs
