[package]
name = "bottt"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.21.0"
anyhow = "1.0.72"
poise = "0.5.5"
shuttle-poise = "0.21.0"
shuttle-secrets = "0.21.0"
tokio = "1.29.1"
tracing = "0.1.37"
songbird = { version = "0.3.2", features = ["yt-dlp", "builtin-queue", "driver"] }
shuttle-static-folder = "0.21.0"
chrono = "0.4.26"
serenity = { version = "0.11.6", default-features = false }
