[package]
name = "bottt"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = { version = "0.27.0", default-features = false }
anyhow = "1.0.75"
poise = "0.5.6"
shuttle-poise = "0.27.0"
shuttle-secrets = "0.27.0"
tokio = "1.32.0"
tracing = "0.1.37"
songbird = { version = "0.3.2", features = ["yt-dlp", "builtin-queue", "driver"] }
chrono = "0.4.31"
serenity = { version = "0.11.6", default-features = false }
